Skriv test for å konvertere naturalytelse perioder